# animal3

./: .gitignore  README.md  pyproject.toml  run-tests.sh
animal3/: README.txt  __init__.py  apps.py  context_processors.py  models.py  session_engine.py  signals.py  sitemaps.py
animal3/adapters/: README.txt  easy_thumbnails.py  faker.py  html_editor.py  markdown.py  mptt.py
animal3/django/: __init__.py  admin.py  apps.py  fields.py  forms.py  image_field.py  models.py  querysets.py  requests.py  search.py  sessions.py  storage.py  utils.py
animal3/fake/: __init__.py  dates.py  django.py  models.py  numbers.py  people.py  text.py  utils.py
animal3/forms/: __init__.py  fields.py  mixins.py  nz.py  renderers.py  utils.py  validators.py  widgets.py
animal3/importers/: README.txt  __init__.py  extractors.py  loaders.py  model_synchroniser.py  syncer.py  transformers.py
animal3/management/: base.py  dumpdata.py
animal3/middleware/: common.py
animal3/templatetags/: animal3_builtins.py  easy_thumbnails.py
animal3/tests/: __init__.py  models.py  test_commands.py  test_models.py  test_sitemaps.py
animal3/utils/: addresses.py  algorithms.py  benchmark.py  cache.py  commands.py  compression.py  continents.py  convert.py  csv.py  dates.py  django.py  email.py  files.py  html.py  iso_3166.py  logging.py  math.py  mimetype.py  serialisers.py  shorten.py  testing.py  text.py  urls.py  vcard.py  zip.py
animal3/views/: __init__.py  admin.py  generic.py  html_editor.py  mixins.py  search.py  simple.py
templates/fields/: date.html  (+5 more)
tests/: test_settings.py  urls.py
(+91 files in other folders)
