
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "animal3"
version = "0.1"
dependencies = [
    "django==4.2.15",
    "django-braces==1.15.0",
    "django-pipeline==3.1.0",
    "sorl-thumbnail==12.10.0",
]
dev-dependencies = [
    "logging-tree==1.10.0",
]
description = "Collection of my core Django components"
readme = "README.md"
requires-python = ">= 3.8"
authors = [
    {name = "Leon Matthews"},
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: X.Y",  # Replace "X.Y" as appropriate
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]


[project.urls]
Homepage = "https://lost.co.nz/"
